# crazyGUI

./: README.md  crazyGUI.py  crazyGUI.pyw  crazyGUI_crazyKhoreiaWidget.py  crazyGUI_crazyKhoreiaWidget.ui  crazyGUI_mainWindow.py  crazyGUI_mainWindow.ui  setup.cfg
Images/: crazyflie.qrc  crazyflie_rc.py
src/crazyGUI/: crazyGUI.py  crazyGUI.pyw
src/crazyGUI/configs/: config.json
src/crazyGUI/ui/: crazyGUI_crazyKhoreiaWidget.py  crazyGUI_crazyKhoreiaWidget.ui  crazyGUI_mainWindow.py  crazyGUI_mainWindow.ui  resource_rc.py
src/crazyGUI/ui/icons/: resource.qrc
