[metadata]
name = crazyGUI
version = 0.0.1
author = Santiago Restrepo Garcia
author_email = sanrega24@gmail.com
description = Python package for the crazyGUI interface.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/santiagorg2401/crazyKhoreia
project_urls =
    Bug Tracker = https://github.com/santiagorg2401/crazyGUI/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    cfclient
    numpy
    yaml
    qdarkstyle
    crazyKhoreia
    
[options.packages.find]
where = src